Strange snapping behaviour #109346

Closed
opened 2023-06-25 18:57:12 +02:00 by Ian Jones · 8 comments

System Information
Operating system: macOS-14.0-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-24 19:39, hash: c8f434e685e5
Worked: 4.0 pre 25 June.

Short description of error

Snapping to vertex is not working and placing it in strange locations.

Try to snap a mesh element to another vertex using snap to active. Depending on which vertex is chosen as the destination it appears in strange locations outside of the mesh. See screen recording. Used factory setting.

at version e0e3650495, it breaks in a way that's consistent with the attached video

at version 39386175e1, it "sort of breaks": looks like it will eventually snap correctly if the pointer is closer to a vertex. If slightly away from the vertex it appears to be snapping to somewhere else, not entirely consistent with what's shown in the video, but can still see it's broken.

Exact steps for others to reproduce the error

  • Open attached file
  • Edit more, select the "wire" part.
  • Try to snap the "wire" part to vertices on the cube
  • The "wire" part jumps to some other places
**System Information** Operating system: macOS-14.0-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-24 19:39, hash: `c8f434e685e5` Worked: 4.0 pre 25 June. **Short description of error** Snapping to vertex is not working and placing it in strange locations. Try to snap a mesh element to another vertex using snap to active. Depending on which vertex is chosen as the destination it appears in strange locations outside of the mesh. See screen recording. Used factory setting. at version e0e3650495, it breaks in a way that's consistent with the attached video at version 39386175e1, it "sort of breaks": looks like it will eventually snap correctly if the pointer is closer to a vertex. If slightly away from the vertex it appears to be snapping to somewhere else, not entirely consistent with what's shown in the video, but can still see it's broken. **Exact steps for others to reproduce the error** - Open attached file - Edit more, select the "wire" part. - Try to snap the "wire" part to vertices on the cube - The "wire" part jumps to some other places
Ian Jones added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-25 18:57:13 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-06-25 19:07:06 +02:00
Member

Can confirm 39386175e1 is broken.

From testing, looks like it will eventually snap correctly if the pointer is closer to a vertex. If slightly away from the vertex it appears to be snapping to somewhere else, not entirely consistent with what's shown in the video, but can still see it's broken.

Can confirm 39386175e1f7 is broken. From testing, looks like it will eventually snap correctly if the pointer is closer to a vertex. If slightly away from the vertex it appears to be snapping to somewhere else, not entirely consistent with what's shown in the video, but can still see it's broken.
YimingWu added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-26 05:13:36 +02:00
YimingWu added
Priority
High
Module
Modeling
and removed
Priority
Normal
labels 2023-06-26 05:18:44 +02:00
Member

Unable to replicate this.
Perhaps affected by f2fb22b94b

Unable to replicate this. Perhaps affected by f2fb22b94b8499422483708f55c3ec053b322976
Member

From here it seems to be caused by 9cbe156d6a , that's the only one I reverted and works fine now.

Seems that I can't stably reproduce the issue, will test more and see what's the problem

From here it seems to be caused by 9cbe156d6a938c6464fa4219a8 , that's the only one I reverted and works fine now. Seems that I can't stably reproduce the issue, will test more and see what's the problem
Member

From here it seems to be caused by 9cbe156d6a , that's the only one I reverted and works fine now.

Strange. In commit history, 9cbe156d6a is after c8f434e685e5 (hash mentioned in the report)

image

> From here it seems to be caused by 9cbe156d6a938c6464fa4219a8 , that's the only one I reverted and works fine now. Strange. In commit history, `9cbe156d6a` is after `c8f434e685e5` (hash mentioned in the report) [image](/attachments/a11d3a11-9b61-4a31-9c47-def6cbf44bfe)
182 KiB
Member

@PratikPB2123 Nope it's not 9cbe156d6a , it just seems I'm not able to replicate the issue in a stable way...

@PratikPB2123 Nope it's not 9cbe156d6a , it just seems I'm not able to replicate the issue in a stable way...
Member

e0e3650495 breaks in a way that's consistent with the attached video

39386175e1 "sort of breaks" in the way described above

e0e36504950e breaks in a way that's consistent with the attached video 39386175e1f7b841c7450365defbe2caece4ad9b "sort of breaks" in the way [described above](https://projects.blender.org/blender/blender/issues/109346#issuecomment-966273)
Member

e0e3650495 breaks in a way that's consistent with the attached video

That commit includes changes in UV operator. Not sure whether it introduced the issue :/
@ChengduLittleA , btw, could you update reproducing steps in report description? :)

> e0e3650495 breaks in a way that's consistent with the attached video That commit includes changes in UV operator. Not sure whether it introduced the issue :/ @ChengduLittleA , btw, could you update reproducing steps in report description? :)
Member
cc @mano-wii
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-26 16:04:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109346
No description provided.