source/blender/editors/transform/transform_snap_object_camera.cc
@@ -44,8 +44,8 @@ eSnapMode snapCamera(SnapObjectContext *sctx,
   BKE_tracking_get_camera_object_matrix(object, orig_camera_mat);
 
   invert_m4_m4(orig_camera_imat, orig_camera_mat);
-  Nearest2dUserData nearest2d(sctx, object, static_cast<const ID *>(object->data));
-  nearest2d.clip_planes_enable();
+  Nearest2dUserData nearest2d(sctx);
+  nearest2d.clip_planes_enable(sctx);
 
   MovieTracking *tracking = &clip->tracking;
   LISTBASE_FOREACH (MovieTrackingObject *, tracking_object, &tracking->objects) {
@@ -82,5 +82,8 @@ eSnapMode snapCamera(SnapObjectContext *sctx,
     }
   }
 
-  return SCE_SNAP_TO_NONE;
+  if (retval) {
+    nearest2d.register_result(sctx, object, static_cast<const ID *>(object->data));
+  }
+  return retval;
 }
